--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -124,6 +124,7 @@ set(msg_files
 	LandingTargetPose.msg
 	LaunchDetectionStatus.msg
 	LedControl.msg
+	LocalPositionHeadingSetpoint.msg
 	LoggerStatus.msg
 	LogMessage.msg
 	MagnetometerBiasEstimate.msg
